fix(inline-select): Updates alignment for inline select invalid message

--- a/src/components/select/_select.scss
+++ b/src/components/select/_select.scss
@@ -121,14 +121,22 @@
   }
 
   .#{$prefix}--select--inline {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    display: grid;
+    grid-template-columns: auto auto;
+    display: -ms-grid;
+
+    // Targets IE10+ browsers: Display grid auto not supported
+    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+    }
 
     .#{$prefix}--label {
       white-space: nowrap;
       margin: 0 $spacing-xs 0 0;
       font-weight: 400;
+      align-self: center;
     }
 
     .#{$prefix}--select-input {
@@ -141,16 +149,17 @@
         @include focus-outline('border');
       }
 
+      ~ .#{$prefix}--select__arrow {
+        bottom: auto;
+        top: 1rem;
+      }
+
       &[data-invalid] {
         outline: 1px solid $support-01;
         color: $text-01;
 
         &:focus {
           box-shadow: none;
-        }
-
-        ~ .#{$prefix}--select__arrow {
-          bottom: 1rem;
         }
       }
 
@@ -160,9 +169,13 @@
       }
 
       ~ .#{$prefix}--form-requirement {
-        position: absolute;
-        bottom: -1.5rem;
-        left: 5.05rem;
+        grid-column-start: 2;
+
+        // Targets IE10+ browsers: Display grid auto not supported
+        @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+          position: absolute;
+          bottom: -1.5rem;
+        }
       }
     }
   }
